Fixed Wrapping

--- a/modal.css
+++ b/modal.css
@@ -638,7 +638,7 @@ footer {
  }
  @media (min-width:768px) {
   .hero-headline {
-    white-space: normal;
+    white-space: nowrap;
 }
 .hero-text {
   width: unset;
